[gd_scene load_steps=3 format=2]

[ext_resource path="res://Core/Plants/PlantsDictionary.gd" type="Script" id=1]
[ext_resource path="res://Core/Plants/PlantReference/PlantReference.tscn" type="PackedScene" id=2]

[node name="PlantsDictionary" type="Node"]
script = ExtResource( 1 )
Dict = {
"fishseed": Object(Node2D,"_import_path":NodePath(""),"pause_mode":0,"physics_interpolation_mode":0,"unique_name_in_owner":false,"process_priority":0,"visible":true,"modulate":Color( 1, 1, 1, 1 ),"self_modulate":Color( 1, 1, 1, 1 ),"show_behind_parent":false,"light_mask":1,"material":null,"use_parent_material":false,"position":Vector2( 0, 0 ),"rotation":0.0,"scale":Vector2( 1, 1 ),"z_index":0,"z_as_relative":true,"script":Resource( "res://Core/Plants/PlantReference/PlantReference.gd" ),"node_name":"fishseed","action_icon":null,"SEED_Harvestable":false,"SEED_StepTime":0.1,"SEED_GrowthPerStep":0.01,"SEED_HarvestList":{
},"GROWING_Harvestable":true,"GROWING_StepTime":0.2,"GROWING_GrowthPerStep":0.01,"GROWING_HarvestList":{
"fish": 100
},"READY_Harvestable":true,"READY_StepTime":1.0,"READY_GrowthPerStep":0.01,"READY_HarvestList":{
"fish": 100
})

}

[node name="Fishseed" parent="." instance=ExtResource( 2 )]
node_name = "fishseed"
SEED_Harvestable = false
GROWING_StepTime = 0.2
GROWING_HarvestList = {
"fish": 100
}
READY_StepTime = 1.0
READY_HarvestList = {
"fish": 100
}

[connection signal="child_entered_tree" from="." to="." method="_on_PlantsDictionary_child_entered_tree"]
[connection signal="child_exiting_tree" from="." to="." method="_on_PlantsDictionary_child_exiting_tree"]
